# fastapi-poc

./: .gitignore  LICENSE  main.py  pyproject.toml
app/: dependencies.py
app/configs/: database.py  logging_config.py  settings.py
app/exceptions/: __init__.py  base_exception.py  custom_exceptions.py  handler.py
app/mapper/: item_mapper.py
app/middleware/: request.py
app/model/: item.py
app/repository/: item_repository.py
app/routers/v1/: api.py  items.py
app/schema/v1/: item_schema.py
app/services/: item_service.py
app/utils/: constants.py  date_util.py  mysql_queries.py  project_util.py  response_builder.py
